Manage secrets and Mu ratio

--- a/examples/create_mount.ipynb
+++ b/examples/create_mount.ipynb
@@ -25,7 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mounter = MountData(user=\"jmunozar\", password=\"KEY\")"
+    "with open('../secrets.json', \"r\") as f:\n",
+    "    config = json.load(f)\n",
+    "mounter = MountData(user=\"jmunozar\", password=config[\"pass\"])"
    ]
   },
   {
