Runner for selected fills filter

--- a/examples/detection copy.ipynb
+++ b/examples/detection copy.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,18 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "fuse: mountpoint is not empty\n",
-      "fuse: if you are sure this is safe, use the 'nonempty' mount option\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('../secrets.json', \"r\") as f:\n",
     "    config = json.load(f)\n",
@@ -113,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,6 +153,374 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-07-06 01:00:04.000000000</th>\n",
+       "      <td>0.000082</td>\n",
+       "      <td>0.000078</td>\n",
+       "      <td>0.000050</td>\n",
+       "      <td>0.000073</td>\n",
+       "      <td>0.000076</td>\n",
+       "      <td>0.000175</td>\n",
+       "      <td>0.000250</td>\n",
+       "      <td>0.000090</td>\n",
+       "      <td>0.000076</td>\n",
+       "      <td>0.000049</td>\n",
+       "      <td>0.000072</td>\n",
+       "      <td>0.000075</td>\n",
+       "      <td>0.000081</td>\n",
+       "      <td>0.000137</td>\n",
+       "      <td>0.000083</td>\n",
+       "      <td>0.000063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-06 01:00:05.025583320</th>\n",
+       "      <td>0.000082</td>\n",
+       "      <td>0.000078</td>\n",
+       "      <td>0.000050</td>\n",
+       "      <td>0.000073</td>\n",
+       "      <td>0.000076</td>\n",
+       "      <td>0.000175</td>\n",
+       "      <td>0.000250</td>\n",
+       "      <td>0.000090</td>\n",
+       "      <td>0.000076</td>\n",
+       "      <td>0.000049</td>\n",
+       "      <td>0.000072</td>\n",
+       "      <td>0.000075</td>\n",
+       "      <td>0.000081</td>\n",
+       "      <td>0.000137</td>\n",
+       "      <td>0.000083</td>\n",
+       "      <td>0.000062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-06 01:00:06.051166640</th>\n",
+       "      <td>0.000082</td>\n",
+       "      <td>0.000078</td>\n",
+       "      <td>0.000050</td>\n",
+       "      <td>0.000073</td>\n",
+       "      <td>0.000076</td>\n",
+       "      <td>0.000175</td>\n",
+       "      <td>0.000250</td>\n",
+       "      <td>0.000090</td>\n",
+       "      <td>0.000076</td>\n",
+       "      <td>0.000049</td>\n",
+       "      <td>0.000072</td>\n",
+       "      <td>0.000075</td>\n",
+       "      <td>0.000081</td>\n",
+       "      <td>0.000137</td>\n",
+       "      <td>0.000083</td>\n",
+       "      <td>0.000062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-06 01:00:07.076749960</th>\n",
+       "      <td>0.000083</td>\n",
+       "      <td>0.000078</td>\n",
+       "      <td>0.000050</td>\n",
+       "      <td>0.000073</td>\n",
+       "      <td>0.000076</td>\n",
+       "      <td>0.000175</td>\n",
+       "      <td>0.000251</td>\n",
+       "      <td>0.000090</td>\n",
+       "      <td>0.000076</td>\n",
+       "      <td>0.000049</td>\n",
+       "      <td>0.000072</td>\n",
+       "      <td>0.000075</td>\n",
+       "      <td>0.000081</td>\n",
+       "      <td>0.000136</td>\n",
+       "      <td>0.000083</td>\n",
+       "      <td>0.000062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-06 01:00:08.102333280</th>\n",
+       "      <td>0.000083</td>\n",
+       "      <td>0.000078</td>\n",
+       "      <td>0.000050</td>\n",
+       "      <td>0.000073</td>\n",
+       "      <td>0.000077</td>\n",
+       "      <td>0.000175</td>\n",
+       "      <td>0.000251</td>\n",
+       "      <td>0.000091</td>\n",
+       "      <td>0.000076</td>\n",
+       "      <td>0.000049</td>\n",
+       "      <td>0.000072</td>\n",
+       "      <td>0.000075</td>\n",
+       "      <td>0.000081</td>\n",
+       "      <td>0.000136</td>\n",
+       "      <td>0.000083</td>\n",
+       "      <td>0.000062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-06 12:00:45.872067960</th>\n",
+       "      <td>0.012397</td>\n",
+       "      <td>0.012024</td>\n",
+       "      <td>0.007514</td>\n",
+       "      <td>0.017023</td>\n",
+       "      <td>0.023058</td>\n",
+       "      <td>0.016073</td>\n",
+       "      <td>0.009384</td>\n",
+       "      <td>0.024744</td>\n",
+       "      <td>0.008901</td>\n",
+       "      <td>0.004938</td>\n",
+       "      <td>0.004705</td>\n",
+       "      <td>0.006867</td>\n",
+       "      <td>0.007716</td>\n",
+       "      <td>0.006388</td>\n",
+       "      <td>0.011488</td>\n",
+       "      <td>0.007548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-06 12:00:46.897651280</th>\n",
+       "      <td>0.012376</td>\n",
+       "      <td>0.012003</td>\n",
+       "      <td>0.007510</td>\n",
+       "      <td>0.016968</td>\n",
+       "      <td>0.023035</td>\n",
+       "      <td>0.016043</td>\n",
+       "      <td>0.009374</td>\n",
+       "      <td>0.024710</td>\n",
+       "      <td>0.008895</td>\n",
+       "      <td>0.004926</td>\n",
+       "      <td>0.004677</td>\n",
+       "      <td>0.006819</td>\n",
+       "      <td>0.007708</td>\n",
+       "      <td>0.006374</td>\n",
+       "      <td>0.011459</td>\n",
+       "      <td>0.007535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-06 12:00:47.923234600</th>\n",
+       "      <td>0.012353</td>\n",
+       "      <td>0.011979</td>\n",
+       "      <td>0.007509</td>\n",
+       "      <td>0.016921</td>\n",
+       "      <td>0.023012</td>\n",
+       "      <td>0.016011</td>\n",
+       "      <td>0.009366</td>\n",
+       "      <td>0.024674</td>\n",
+       "      <td>0.008884</td>\n",
+       "      <td>0.004916</td>\n",
+       "      <td>0.004654</td>\n",
+       "      <td>0.006773</td>\n",
+       "      <td>0.007704</td>\n",
+       "      <td>0.006363</td>\n",
+       "      <td>0.011433</td>\n",
+       "      <td>0.007524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-06 12:00:48.948817920</th>\n",
+       "      <td>0.012328</td>\n",
+       "      <td>0.011953</td>\n",
+       "      <td>0.007504</td>\n",
+       "      <td>0.016882</td>\n",
+       "      <td>0.022987</td>\n",
+       "      <td>0.015977</td>\n",
+       "      <td>0.009359</td>\n",
+       "      <td>0.024635</td>\n",
+       "      <td>0.008868</td>\n",
+       "      <td>0.004906</td>\n",
+       "      <td>0.004634</td>\n",
+       "      <td>0.006730</td>\n",
+       "      <td>0.007702</td>\n",
+       "      <td>0.006353</td>\n",
+       "      <td>0.011410</td>\n",
+       "      <td>0.007515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-06 12:00:49.974401240</th>\n",
+       "      <td>0.012301</td>\n",
+       "      <td>0.011925</td>\n",
+       "      <td>0.007494</td>\n",
+       "      <td>0.016852</td>\n",
+       "      <td>0.022961</td>\n",
+       "      <td>0.015941</td>\n",
+       "      <td>0.009353</td>\n",
+       "      <td>0.024594</td>\n",
+       "      <td>0.008847</td>\n",
+       "      <td>0.004899</td>\n",
+       "      <td>0.004619</td>\n",
+       "      <td>0.006690</td>\n",
+       "      <td>0.007701</td>\n",
+       "      <td>0.006345</td>\n",
+       "      <td>0.011391</td>\n",
+       "      <td>0.007509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>38658 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     0         1         2         3   \\\n",
+       "index                                                                   \n",
+       "2022-07-06 01:00:04.000000000  0.000082  0.000078  0.000050  0.000073   \n",
+       "2022-07-06 01:00:05.025583320  0.000082  0.000078  0.000050  0.000073   \n",
+       "2022-07-06 01:00:06.051166640  0.000082  0.000078  0.000050  0.000073   \n",
+       "2022-07-06 01:00:07.076749960  0.000083  0.000078  0.000050  0.000073   \n",
+       "2022-07-06 01:00:08.102333280  0.000083  0.000078  0.000050  0.000073   \n",
+       "...                                 ...       ...       ...       ...   \n",
+       "2022-07-06 12:00:45.872067960  0.012397  0.012024  0.007514  0.017023   \n",
+       "2022-07-06 12:00:46.897651280  0.012376  0.012003  0.007510  0.016968   \n",
+       "2022-07-06 12:00:47.923234600  0.012353  0.011979  0.007509  0.016921   \n",
+       "2022-07-06 12:00:48.948817920  0.012328  0.011953  0.007504  0.016882   \n",
+       "2022-07-06 12:00:49.974401240  0.012301  0.011925  0.007494  0.016852   \n",
+       "\n",
+       "                                     4         5         6         7   \\\n",
+       "index                                                                   \n",
+       "2022-07-06 01:00:04.000000000  0.000076  0.000175  0.000250  0.000090   \n",
+       "2022-07-06 01:00:05.025583320  0.000076  0.000175  0.000250  0.000090   \n",
+       "2022-07-06 01:00:06.051166640  0.000076  0.000175  0.000250  0.000090   \n",
+       "2022-07-06 01:00:07.076749960  0.000076  0.000175  0.000251  0.000090   \n",
+       "2022-07-06 01:00:08.102333280  0.000077  0.000175  0.000251  0.000091   \n",
+       "...                                 ...       ...       ...       ...   \n",
+       "2022-07-06 12:00:45.872067960  0.023058  0.016073  0.009384  0.024744   \n",
+       "2022-07-06 12:00:46.897651280  0.023035  0.016043  0.009374  0.024710   \n",
+       "2022-07-06 12:00:47.923234600  0.023012  0.016011  0.009366  0.024674   \n",
+       "2022-07-06 12:00:48.948817920  0.022987  0.015977  0.009359  0.024635   \n",
+       "2022-07-06 12:00:49.974401240  0.022961  0.015941  0.009353  0.024594   \n",
+       "\n",
+       "                                     8         9         10        11  \\\n",
+       "index                                                                   \n",
+       "2022-07-06 01:00:04.000000000  0.000076  0.000049  0.000072  0.000075   \n",
+       "2022-07-06 01:00:05.025583320  0.000076  0.000049  0.000072  0.000075   \n",
+       "2022-07-06 01:00:06.051166640  0.000076  0.000049  0.000072  0.000075   \n",
+       "2022-07-06 01:00:07.076749960  0.000076  0.000049  0.000072  0.000075   \n",
+       "2022-07-06 01:00:08.102333280  0.000076  0.000049  0.000072  0.000075   \n",
+       "...                                 ...       ...       ...       ...   \n",
+       "2022-07-06 12:00:45.872067960  0.008901  0.004938  0.004705  0.006867   \n",
+       "2022-07-06 12:00:46.897651280  0.008895  0.004926  0.004677  0.006819   \n",
+       "2022-07-06 12:00:47.923234600  0.008884  0.004916  0.004654  0.006773   \n",
+       "2022-07-06 12:00:48.948817920  0.008868  0.004906  0.004634  0.006730   \n",
+       "2022-07-06 12:00:49.974401240  0.008847  0.004899  0.004619  0.006690   \n",
+       "\n",
+       "                                     12        13        14        15  \n",
+       "index                                                                  \n",
+       "2022-07-06 01:00:04.000000000  0.000081  0.000137  0.000083  0.000063  \n",
+       "2022-07-06 01:00:05.025583320  0.000081  0.000137  0.000083  0.000062  \n",
+       "2022-07-06 01:00:06.051166640  0.000081  0.000137  0.000083  0.000062  \n",
+       "2022-07-06 01:00:07.076749960  0.000081  0.000136  0.000083  0.000062  \n",
+       "2022-07-06 01:00:08.102333280  0.000081  0.000136  0.000083  0.000062  \n",
+       "...                                 ...       ...       ...       ...  \n",
+       "2022-07-06 12:00:45.872067960  0.007716  0.006388  0.011488  0.007548  \n",
+       "2022-07-06 12:00:46.897651280  0.007708  0.006374  0.011459  0.007535  \n",
+       "2022-07-06 12:00:47.923234600  0.007704  0.006363  0.011433  0.007524  \n",
+       "2022-07-06 12:00:48.948817920  0.007702  0.006353  0.011410  0.007515  \n",
+       "2022-07-06 12:00:49.974401240  0.007701  0.006345  0.011391  0.007509  \n",
+       "\n",
+       "[38658 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anomaly_dict[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ch7 = anomaly_dict[0][7]\n",
+    "sns.lineplot(np.diff(ch7.values))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +560,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -229,7 +579,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2aa283de9147d4fb1243955fddb5ce7838e1795e475e966ee3d0f53e28ebe334"
+    "hash": "c79f4a700cb7408edd49bb4fa24f8c97b61ad98897cf2d94ababbd1ea3347f27"
    }
   }
  },
