--- a/examples/batch_detection.ipynb
+++ b/examples/batch_detection.ipynb
@@ -20,6 +20,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
     "import warnings\n",
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,63 +97,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dessired_fills = [\n",
-    "    7652,\n",
-    "    7663,\n",
-    "    7670,\n",
-    "    7679,\n",
-    "    7690,\n",
-    "    7692,\n",
-    "    7694,\n",
-    "    7697,\n",
-    "    7698,\n",
-    "    7699,\n",
-    "    7725,\n",
-    "    7733,\n",
-    "    7816,\n",
-    "    7856,\n",
-    "    7876,\n",
-    "    7886,\n",
-    "    7895,\n",
-    "    7908,\n",
-    "    7915,\n",
-    "    7920,\n",
-    "    7921,\n",
-    "]"
+    "dessired_fills = [8221, 8222, 8223, 8225, 8226, 8228, 8230, 8232, 8233, 8236, 8238, 8245, 8247, 8248, 8253, 8260, 8263, 8267, 8269, 8272, 8273, 8274, 8276,] #8289, 8293, 8295, 8297, 8299, 8301, 8302, 8304, 8305, 8306, 8307, 8309, 8311, 8312, 8313, 8314, 8315, 8316, 8317, 8319, 8320, 8321, 8322, 8324, 8327, 8330, 8331, 8333, 8334, 8335, 8342, 8345, 8347, 8379, 8381, 8383, 8385, 8387, 8389, 8392, 8395, 8398, 8399, 8401, 8402, 8412, 8413, 8456, 8471, 8474, 8479, 8484, 8489, 8491, 8496]\n",
+    "selected_channels = [10, 11, 12, 13, 14, 15]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data mount found\n",
+      "Selected fills: ['8221', '8222', '8223', '8225', '8226', '8228', '8230', '8232', '8233', '8236', '8238', '8245', '8247', '8248', '8253', '8260', '8263', '8267', '8269', '8272', '8273', '8274', '8276']\n",
+      "Overwrite:  False\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf13a74e34e9449688db3ad5b46c09c0",
+       "model_id": "6a18ead7a81d4d2a92aed306089cb696",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/732 [00:00<?, ?it/s]"
+       "  0%|          | 0/23 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running pipeline...\n",
+      "Found 2 runs for fill 8221\n",
+      "Plotting...\n",
+      "Running pipeline...\n",
+      "Found 4 runs for fill 8222\n",
+      "Plotting...\n",
+      "Running pipeline...\n",
+      "Found 3 runs for fill 8223\n",
+      "Plotting...\n",
+      "Running pipeline...\n",
+      "Found 4 runs for fill 8225\n",
+      "Plotting...\n",
+      "Running pipeline...\n",
+      "Found 3 runs for fill 8226\n",
+      "Plotting...\n",
+      "Running pipeline...\n",
+      "Found 9 runs for fill 8228\n",
+      "Plotting...\n",
+      "Running pipeline...\n",
+      "Found 6 runs for fill 8230\n",
+      "Plotting...\n",
+      "Running pipeline...\n",
+      "Found 3 runs for fill 8232\n",
+      "Plotting...\n",
+      "Running pipeline...\n",
+      "Found 18 runs for fill 8233\n",
+      "Plotting...\n",
+      "Running pipeline...\n",
+      "Found 2 runs for fill 8236\n"
+     ]
     }
    ],
    "source": [
     "if True:\n",
     "    AnomalySearcher().run_scan(\n",
     "        mount_path=MOUNT_TARGET,\n",
-    "        output_path=f\"/afs/cern.ch/user/j/jmunozar/private/InProcess/anomalies_results\",\n",
-    "        make_anomalous_plots=True,\n",
+    "        selected_fills = dessired_fills,\n",
+    "        output_path=f\"/afs/cern.ch/user/j/jmunozar/private/InProcess/filtered_stable_fills/anomalies\",\n",
+    "        make_anomalous_plots=False,\n",
     "        overwrite=False,\n",
     "        progress_bar=True,\n",
+    "        selected_channels = selected_channels,\n",
     "    )"
    ]
   },
@@ -157,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -176,7 +211,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2aa283de9147d4fb1243955fddb5ce7838e1795e475e966ee3d0f53e28ebe334"
+    "hash": "0c4643a9bde794cd5b1fb151f1487ee51af0e75811e08db3287769a273ef6a93"
    }
   }
  },
